Use finish copy, hide donate button

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1416,6 +1416,7 @@
 "year-in-review-donate" = "Donate";
 "year-in-review-donate-now" = "Donate now";
 "year-in-review-done" = "Done";
+"year-in-review-finish" = "Finish";
 "year-in-review-get-started" = "Get Started";
 "year-in-review-hide" = "Hide this feature";
 "year-in-review-next" = "Next";
