--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -966,7 +966,6 @@
 "profile-page-join-title" = "Link to sign up or sign in";
 "profile-page-logged-out-year-in-review-subtext" = "Footer text that appears underneath the Year in Review item in the Profile menu when the user is in a logged out state.";
 "profile-page-title-logged-out" = "Page title for non-logged in users";
-"profile-page-year-in-review-title" = "Year in review profile item title. Appears on user's profile menu and presents the Wikipedia Year in Review feature when tapped.";
 "project-name-mediawiki" = "Project name for MediaWiki.";
 "project-name-wikibooks" = "Project name for Wikibooks.";
 "project-name-wikidata" = "Project name for Wikidata.";
@@ -1130,6 +1129,8 @@
 "settings-notifications-push-notifications" = "A title for a list of Push notifications";
 "settings-notifications-system-turn-on" = "Title for a button for turnining on notifications in the system settings";
 "settings-notifications-trending" = "Title for the setting for trending notifications";
+"settings-off" = "Text indicating a value is off in app Settings.";
+"settings-on" = "Text indicating a value is on in app Settings.";
 "settings-primary-language" = "Label shown next to primary language {{Identical|Primary}}";
 "settings-primary-language-details" = "Explanation of how the first preferred language is used. \"Explore\" is {{msg-wm|Wikipedia-ios-home-title}}.";
 "settings-search-footer-text" = "Footer text for section that allows users to customize certain Search settings";
@@ -1410,6 +1411,7 @@
 "year-in-review-base-reading-title" = "Year in review, collective reading article count slide title";
 "year-in-review-base-viewed-subtitle" = "Year in review, collective article view count subtitle, $1 is replaced with the number of article views text, e.g. \"1.4 billion times\"";
 "year-in-review-base-viewed-title" = "Year in review, collective article view count slide title. $1 is replaced with the text representing the number of article views across Wikipedia, e.g. \"1.4 billion times\".";
+"year-in-review-button-title" = "Year in review title. Appears on buttons in the profile and settings menu.";
 "year-in-review-donate" = "Year in review donate button";
 "year-in-review-done" = "Year in review done button";
 "year-in-review-get-started" = "Button to continue to year in review";
