--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1409,7 +1409,6 @@
 "year-in-review-done" = "Year in review done button";
 "year-in-review-finish" = "Year in review finish button. Displayed on last slide and dismisses feature view.";
 "year-in-review-get-started" = "Button to continue to year in review";
-"year-in-review-hide" = "Button to hide year in review feature";
 "year-in-review-next" = "Year in review next button";
 "year-in-review-personalized-donate-subtitle" = "Year in review, personalized donate slide subtitle for users that donated at least once that year. $1 is replaced with a MediaWiki url with more information about WMF. Do not alter markdown when translating.";
 "year-in-review-personalized-donate-title" = "Year in review, personalized donate slide title for users that donated at least once that year.";
@@ -1423,6 +1422,7 @@
 "year-in-review-personalized-reading-title- format" = "Year in review, personalized reading article count slide title for users that read articles. $1 is replaced with the number of articles the user read.";
 "year-in-review-share" = "Year in review share button";
 "year-in-review-share-text" = "Text shared the Year In Review slides";
+"year-in-review-start" = "Button to go to year in review informative page";
 "year-in-review-subtitle" = "Year in review page information";
 "year-in-review-survey-additional-thoughts" = "Year in review survey placeholder for additional thoughts textfield. Survey is displayed after user has viewed the last slide of their year in review feature.";
 "year-in-review-survey-neutral" = "Year in review survey option 3 text. Survey is displayed after user has viewed the last slide of their year in review feature.";
