Update URL, styling according to Robin

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1408,7 +1408,7 @@
 "year-in-review-donate-now" = "Donate now";
 "year-in-review-done" = "Done";
 "year-in-review-finish" = "Finish";
-"year-in-review-get-started" = "Get Started";
+"year-in-review-get-started" = "Get started";
 "year-in-review-hide" = "Hide this feature";
 "year-in-review-next" = "Next";
 "year-in-review-personalized-donate-subtitle" = "Thank you for supporting Wikipedia and a world where knowledge is free for everyone. Every single edit and donation helps improve people’s access to accurate and reliable information, especially in a rapidly changing world. [Learn more about our work]($1).";
