Updated copy and URL

--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1398,7 +1398,7 @@
 "year-in-review-base-donate-title" = "Year in review, donate slide title when user has not made any donations that year.";
 "year-in-review-base-editors-subtitle" = "Year in review, collective edits count slide subtitle, $1 is replaced with the number of edits text, e.g. \"452,257\"";
 "year-in-review-base-editors-title" = "Year in review, collective edits count slide title, $1 is replaced with the number of edits text, e.g. \"452,257\".";
-"year-in-review-base-edits-subtitle" = "Year in review, collective edits per minute slide subtitle, $1 is replaced with the number of edits per minute text, e.g. \"342\"";
+"year-in-review-base-edits-subtitle" = "Year in review, collective edits per minute slide subtitle, $1 is replaced with the number of edits per minute text, e.g. \"342\". $2 is replaced with a link to the Mediawiki Apps team FAQ about editing.";
 "year-in-review-base-edits-title" = "Year in review, collective edits per minute slide title, $1 is replaced with the number of edits per minute text, e.g. \"342\".";
 "year-in-review-base-reading-subtitle" = "Year in review, collective reading count slide subtitle. $1 is replaced with a formatted number of articles available across Wikipedia, e.g. \"63.59\". $2 is replaced with the number of active languages available on Wikipedia, e.g. \"332\"";
 "year-in-review-base-reading-title" = "Year in review, collective reading article count slide title";
