--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -1150,6 +1150,7 @@
 "settings-storage-and-syncing-show-default-reading-list-title" = "Title of the settings option that enables showing the default reading list";
 "settings-storage-and-syncing-title" = "Title of the saved articles storage and syncing settings screen";
 "settings-title" = "Title of the view where app settings are displayed. {{Identical|Settings}}";
+"settings-year-in-review-header" = "Text informing user of benefits of hiding the year in review feature.";
 "share-a-fact-made-with" = "Indicates that the share-a-fact card was made with the Wikipedia app";
 "share-article-name-on-wikipedia" = "Formatted string expressing article being on Wikipedia. $1 will be an article title, which should be wrapped in the localized double quote marks.";
 "share-building" = "Shown while Share-a-fact card is being constructed";
@@ -1408,6 +1409,8 @@
 "year-in-review-button-title" = "Year in review title. Appears on buttons in the profile and settings menu.";
 "year-in-review-donate" = "Year in review donate button";
 "year-in-review-donate-now" = "Year in review donate now button title. Displayed on top of Learn more in-app web view.";
+"year-in-review-feature-announcement-body" = "Body for year in review feature announcement";
+"year-in-review-feature-announcement-title" = "Title for year in review feature announcement";
 "year-in-review-finish" = "Year in review finish button. Displayed on last slide and dismisses feature view.";
 "year-in-review-next" = "Year in review next button";
 "year-in-review-personalized-donate-subtitle" = "Year in review, personalized donate slide subtitle for users that donated at least once that year. $1 is replaced with a MediaWiki url with more information about WMF. Do not alter markdown when translating.";
@@ -1430,5 +1433,3 @@
 "year-in-review-survey-unsatisfied" = "Year in review survey option 4 text. Survey is displayed after user has viewed the last slide of their year in review feature.";
 "year-in-review-survey-very-satisfied" = "Year in review survey option 1 text. Survey is displayed after user has viewed the last slide of their year in review feature.";
 "year-in-review-survey-very-unsatisfied" = "Year in review survey option 5 text. Survey is displayed after user has viewed the last slide of their year in review feature.";
-"yir-feature-announcement-body" = "Body for year in review feature announcement";
-"yir-feature-announcement-title" = "Title for year in review feature announcement";
