--- a/Wikipedia/Localizations/it.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/it.lproj/Localizable.strings
@@ -1026,7 +1026,7 @@
 "year-in-review-personalized-reading-title-format" = "Hai letto {{PLURAL:$1|$1 voce|$1 voci}} quest'anno";
 "year-in-review-personalized-reading-subtitle-format" = "Quest'anno hai letto {{PLURAL:$1|$1 articolo|$1 articoli}}. Gli articoli presenti su Wikipedia quest'anno sono $2 milioni, in oltre $3 lingue attive. Ti sei unito a milioni di persone nell'espansione della conoscenza e nell'approfondimento di argomenti diversi.";
 "year-in-review-share" = "Condividi";
-"year-in-review-share-text" = "Este es mi repaso anual de Wikipedia. Creado con la aplicación Wikipedia iOS";
+"year-in-review-share-text" = "Ecco la mia rassegna annuale di Wikipedia. Creata con l'app Wikipedia per iOS ";
 "year-in-review-start" = "Ulteriori informazioni";
 "year-in-review-subtitle" = "Visualizza approfondimenti sugli articoli che leggi sull'app Wikipedia e sulle modifiche apportate. La cronologia delle tue letture rimane protetta. Gli approfondimenti sulle letture vengono determinati utilizzando i dati archiviati localmente sul tuo dispositivo.";
 "year-in-review-survey-additional-thoughts" = "Qualche considerazione aggiuntiva?";
