--- a/Wikipedia/Localizations/it.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/it.lproj/Localizable.strings
@@ -1001,7 +1001,7 @@
 "wikitext-upload-save-anonymously-warning" = "Le modifiche verranno attribuite all'indirizzo IP del tuo dispositivo. Se $1 avrai maggiore privacy.";
 "wikitext-upload-save-sign-in" = "Accedi";
 "wikitext-upload-save-terms-name" = "Condizioni d'uso";
-"year-in-review-base-donate-subtitle" = "Wikipedia è ospitata dalla Wikimedia Foundation e finanziata da donazioni individuali. Lavoriamo per mantenere i siti Wikimedia disponibili a tutti, per creare funzionalità e strumenti che facilitino la condivisione della conoscenza, per supportare le community di redattori volontari e non solo. [Scopri di più sul nostro lavoro].($1)";
+"year-in-review-base-donate-subtitle" = "Wikipedia è ospitata dalla Wikimedia Foundation e finanziata da donazioni individuali. Lavoriamo per mantenere i siti Wikimedia disponibili a tutti, per creare funzionalità e strumenti che facilitino la condivisione della conoscenza, per supportare le community di redattori volontari e non solo. [Scopri di più sul nostro lavoro]($1).";
 "year-in-review-base-donate-title" = "0 annunci pubblicati su Wikipedia";
 "year-in-review-base-editors-subtitle" = "Quest'anno la community di redattori volontari di Wikipedia ha apportato più di $1 modifiche all'app iOS. Il cuore e l'anima di Wikipedia sono costituiti dalla community internazionale di contributori volontari, di donatori e di miliardi di lettori come te, uniti per condividere un accesso illimitato a un'informazione affidabile.";
 "year-in-review-base-editors-title" = "I redattori dell'app iOS hanno apportato più di $1 modifiche";
@@ -1019,7 +1019,7 @@
 "year-in-review-feature-announcement-title" = "Esplora la tua rassegna annuale di Wikipedia";
 "year-in-review-finish" = "Termina";
 "year-in-review-next" = "Successivo";
-"year-in-review-personalized-donate-subtitle" = "Grazie per il tuo sostegno a Wikipedia e alla creazione di un mondo in cui la conoscenza sia gratuita per tutti. Ogni singola modifica o donazione serve ad arricchire l’accesso a informazioni accurate e affidabili, soprattutto in una realtà in rapido cambiamento. [Scopri di più sul nostro lavoro.]($1)";
+"year-in-review-personalized-donate-subtitle" = "Grazie per il tuo sostegno a Wikipedia e alla creazione di un mondo in cui la conoscenza sia gratuita per tutti. Ogni singola modifica o donazione serve ad arricchire l’accesso a informazioni accurate e affidabili, soprattutto in una realtà in rapido cambiamento. [Scopri di più sul nostro lavoro]($1).";
 "year-in-review-personalized-donate-title" = "Grazie per il tuo contributo!";
 "year-in-review-personalized-editing-subtitle-format" = "Hai modificato Wikipedia {{PLURAL:$1|$1 volta|$1 volte}}. Grazie per essere uno dei redattori volontari che offrono il loro contributo nei progetti Wikimedia in tutto il mondo.";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "Hai modificato Wikipedia 500+ volte. Grazie per essere uno dei redattori volontari che offrono il loro contributo nei progetti Wikimedia in tutto il mondo.";
