Avoid double "image"s

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -1441,6 +1441,6 @@
 "year-in-review-survey-unsatisfied" = "Unsatisfied";
 "year-in-review-survey-very-satisfied" = "Very satisfied";
 "year-in-review-survey-very-unsatisfied" = "Very unsatisfied";
-"year-in-review-wikipedia-globe-accessibility-label" = "Wikipedia globe logo image";
-"year-in-review-wikipedia-w-accessibility-label" = "Wikipedia w logo image";
-"year-in-review-wmf-logo-accessibility-label" = "Wikimedia Foundation logo image";
+"year-in-review-wikipedia-globe-accessibility-label" = "Wikipedia globe logo";
+"year-in-review-wikipedia-w-accessibility-label" = "Wikipedia w logo";
+"year-in-review-wmf-logo-accessibility-label" = "Wikimedia Foundation logo";
